--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,19 +7,15 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:text="目录"
         android:textSize="28sp"
-        android:gravity="center"
         android:textStyle="bold" />
-<ListView
-    android:id="@+id/lv_main_title"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="第8章 丰富你的程序——运用手机   多媒体"
-        android:textSize="28sp" />
+
+    <ListView
+        android:id="@+id/lv_main_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 
 </LinearLayout>
