--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,9 +7,11 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="10dp"
         android:gravity="center"
         android:text="目录"
-        android:textSize="28sp"
+        android:textColor="@color/colorBlack"
+        android:textSize="27sp"
         android:textStyle="bold" />
 
     <ListView
